added a css for a button

--- a/style.css
+++ b/style.css
@@ -16,3 +16,14 @@ body{
     border: 4px black;
     
 }
+
+#btn{
+    padding: 5px;
+    width: 1200px;
+    height: 70px;
+    background-color: rgb(255, 255, 255);
+    font-size: 20px;
+    color: black;
+    font-family:'Press Start 2P', cursive ;
+    margin: 0px 300px 0px 400px;
+}
